src/core-crm/objects/ServiceAppointment/ServiceAppointment.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>