src/core-crm/objects/ServiceAppointment/fields/Alteration_URL__c.field-meta.xml
<CustomField>
    <fullName>Alteration_URL__c</fullName>
    <description>URL for editing/canceling the service appointment.</description>
    <formula>&apos;URL&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alteration URL</label>
    <type>Text</type>
</CustomField>