src/core-crm/objects/ServiceAppointment/fields/Appointment_Email__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Email__c</fullName>
    <description>Appointment setters email address</description>
    <formula>IF(
    NOT(ISBLANK( Web_Email__c  )),
    Web_Email__c ,
    IF(
        NOT(ISBLANK( Contact.Email )),
        Contact.Email,
        IF(
            NOT(ISBLANK(  LeadId__r.Email )),
            LeadId__r.Email,
            IF(
                NOT(ISBLANK( CaseId__r.Contact.Email )),
                CaseId__r.Contact.Email,
                IF(
                   NOT(ISBLANK( CaseId__r.Lead__r.Email  )),
                   CaseId__r.Lead__r.Email,
                 &quot;&quot;
                )
           )
               
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>