src/core-crm/objects/ServiceAppointment/fields/Appointment_Summary__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Summary__c</fullName>
    <description>Covers the notes that the advisor will take during an appointment</description>
    <label>Appointment Summary</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>