src/core-crm/objects/ServiceAppointment/fields/Appointment_Topic__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Topic__c</fullName>
    <description>The subject describes the topic of conversation for the appointment</description>
    <label>Appointment Topic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry requirements &amp; study pathways</fullName>
            </value>
            <value>
                <fullName>Course information</fullName>
            </value>
            <value>
                <fullName>Applying for a course</fullName>
            </value>
            <value>
                <fullName>My application and offer</fullName>
            </value>
            <value>
                <fullName>My enrolment</fullName>
            </value>
            <value>
                <fullName>Fees, costs and scholarships</fullName>
            </value>
            <value>
                <fullName>Student life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>