src/core-crm/objects/ServiceAppointment/fields/Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confirmation Email Sent</label>
    <type>Checkbox</type>
</CustomField>