src/core-crm/objects/ServiceAppointment/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>Appointment setters first name</description>
    <formula>IF(
    NOT(ISBLANK(Web_First_Name__c)),
    Web_First_Name__c,
    IF(
        NOT(ISBLANK( Contact__r.FirstName )),
        Contact__r.FirstName,
        IF(
            NOT(ISBLANK( LeadId__r.FirstName )),
            LeadId__r.FirstName,
             IF(
                NOT(ISBLANK(CaseId__r.Contact.FirstName)),
                CaseId__r.Contact.FirstName,
                IF(
                   NOT(ISBLANK( CaseId__r.Lead__r.FirstName  )),
                   CaseId__r.Lead__r.FirstName,
                    &quot;&quot;
                )
           )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Name</label>
    <type>Text</type>
</CustomField>