src/core-crm/objects/ServiceAppointment/fields/GUID__c.field-meta.xml
<CustomField>
    <fullName>GUID__c</fullName>
    <description>GUID to be used for Cancel and Reschedule of Service Appointments</description>
    <externalId>true</externalId>
    <label>GUID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>