src/core-crm/objects/ServiceAppointment/fields/GUID_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>GUID_Wrapper__c</fullName>
    <description>To accommodate existing data where GUID had not been created</description>
    <formula>BLANKVALUE( GUID__c ,   Service_Appointment_ID__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GUID Wrapper</label>
    <type>Text</type>
</CustomField>