src/core-crm/objects/ServiceAppointment/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Appointment setters last name</description>
    <formula>IF(
    NOT(ISBLANK( Web_Last_Name__c )),
    Web_Last_Name__c,
    IF(
        NOT(ISBLANK( Contact.LastName )),
        Contact.LastName,
        IF(
            NOT(ISBLANK( LeadId__r.LastName )),
            LeadId__r.LastName,
              IF(
                NOT(ISBLANK(CaseId__r.Contact.LastName)),
                CaseId__r.Contact.LastName,
                IF(
                   NOT(ISBLANK( CaseId__r.Lead__r.LastName  )),
                   CaseId__r.Lead__r.LastName,
                    &quot;&quot;
                )
           )
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Name</label>
    <type>Text</type>
</CustomField>