src/core-crm/objects/ServiceAppointment/fields/Marketing_Consent__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the appointment setter has agreed to receive QUT marketing material.</description>
    <label>Marketing Consent</label>
    <type>Checkbox</type>
</CustomField>