src/core-crm/objects/ServiceAppointment/fields/Mobile_Locale__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Locale__c</fullName>
    <description>Appointment setters mobile locale</description>
    <formula>IF(
    NOT(ISBLANK(TEXT(Web_Mobile_Locale__c))),
    TEXT(Web_Mobile_Locale__c),
    IF(
        NOT(ISBLANK(Contact.MobilePhone)),
        Contact.MobilePhone,
        IF(
            NOT(ISBLANK(LeadId__r.MobilePhone)),
            LeadId__r.MobilePhone,
            IF(
                NOT(ISBLANK(CaseId__r.Contact.MobilePhone)),
                CaseId__r.Contact.MobilePhone,
                IF(
                    NOT(ISBLANK(CaseId__r.Lead__r.MobilePhone)),
                    CaseId__r.Lead__r.MobilePhone,
                    &quot;&quot;
                )
            )   
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile Locale</label>
    <type>Text</type>
</CustomField>