src/core-crm/objects/ServiceAppointment/fields/Mobile_No_Locale__c.field-meta.xml
<CustomField>
    <fullName>Mobile_No_Locale__c</fullName>
    <description>Appointment setters mobile without the international locale</description>
    <formula>IF(
    NOT(ISBLANK(  Web_Mobile_No_Locale__c  )),
    Web_Mobile_No_Locale__c ,
    IF(
        NOT(ISBLANK( Contact.Mobile_No_Locale__c  )),
        Contact.Mobile_No_Locale__c,
        IF(
            NOT(ISBLANK(  LeadId__r.Mobile_No_Locale__c  )),
            LeadId__r.Mobile_No_Locale__c,
            IF(
                NOT(ISBLANK(  CaseId__r.Contact.Mobile_No_Locale__c  )),
                CaseId__r.Contact.Mobile_No_Locale__c,
                IF(
                   NOT(ISBLANK( CaseId__r.Lead__r.Mobile_No_Locale__c   )),
                   CaseId__r.Lead__r.Mobile_No_Locale__c,
                    &quot;&quot;
                )
           )

        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mobile No Locale</label>
    <type>Text</type>
</CustomField>