src/core-crm/objects/ServiceAppointment/fields/My_Country_Of_Citizenship__c.field-meta.xml
<CustomField>
    <fullName>My_Country_Of_Citizenship__c</fullName>
    <description>The contact or leads Citizenship Country</description>
    <label>My Country Of Citizenship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>