src/core-crm/objects/ServiceAppointment/fields/My_Country_Of_Residency__c.field-meta.xml
<CustomField>
    <fullName>My_Country_Of_Residency__c</fullName>
    <label>My Country Of Residency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>