src/core-crm/objects/ServiceAppointment/fields/Service_Appointment_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_ID__c</fullName>
    <description>This will show the 18 character Salesforce ID for the service appointment</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Appointment ID</label>
    <type>Text</type>
</CustomField>