src/core-crm/objects/ServiceAppointment/fields/Web_Email__c.field-meta.xml
<CustomField>
    <fullName>Web_Email__c</fullName>
    <description>Appointment setters email address</description>
    <label>Web Email</label>
    <type>Email</type>
</CustomField>