src/core-crm/objects/ServiceAppointment/fields/Web_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_First_Name__c</fullName>
    <description>Appointment setters first name</description>
    <label>Web First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>