src/core-crm/objects/ServiceAppointment/fields/Web_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Web_Last_Name__c</fullName>
    <description>Appointment setters last name</description>
    <label>Web Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>