src/core-crm/objects/ServiceAppointment/fields/Web_Mobile_No_Locale__c.field-meta.xml
<CustomField>
    <fullName>Web_Mobile_No_Locale__c</fullName>
    <description>Appointment setters mobile without the international locale</description>
    <label>Web Mobile No Locale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>