src/core-crm/objects/ServiceAppointment/recordTypes/Future_Student_Appointment.recordType-meta.xml
<RecordType>
    <fullName>Future_Student_Appointment</fullName>
    <active>true</active>
    <description>These appointments are created for Domestic and International Advisors that will assist potential future students.</description>
    <label>Future Student Appointment</label>
</RecordType>