src/core-crm/objects/ServiceAppointment/listViews/My_Scheduled_Appointments.listView-meta.xml
<ListView>
    <fullName>My_Scheduled_Appointments</fullName>
    <columns>SchedStartTime</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Appointment_Topic__c</columns>
    <columns>SchedEndTime</columns>
    <columns>Owner</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>My Scheduled Appointments</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Future_Student_Super_User_Domestic</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Future_Student_Super_User_International</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>