src/core-crm/objects/ServiceAppointment/listViews/Next_30_Days_Appointments_International.listView-meta.xml
<ListView>
    <fullName>Next_30_Days_Appointments_International</fullName>
    <columns>SchedStartTime</columns>
    <columns>Name</columns>
    <columns>WorkType</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Appointment_Topic__c</columns>
    <columns>SchedEndTime</columns>
    <columns>My_Country_Of_Residency__c</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
        <field>WorkType</field>
        <operation>equals</operation>
        <value>International Phone Calls</value>
    </filters>
    <label>Next 30 Days Appointments- International</label>
    <sharedTo>
        <group>Future_Students_International</group>
    </sharedTo>
</ListView>