src/core-crm/objects/ServiceAppointment/listViews/Todays_Appointments_Domestic.listView-meta.xml
<ListView>
    <fullName>Todays_Appointments_Domestic</fullName>
    <columns>SchedStartTime</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Appointment_Topic__c</columns>
    <columns>SchedEndTime</columns>
    <columns>Owner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <filters>
        <field>SchedStartTime</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>WorkType</field>
        <operation>equals</operation>
        <value>Domestic Support</value>
    </filters>
    <label>Today&apos;s Appointments - Domestic</label>
    <sharedTo>
        <group>Future_Students_Domestic</group>
        <roleAndSubordinatesInternal>Future_Student_Super_User_Domestic</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>